Added new action HTTP2ROS action, which should help us to communicate with ROS bridge without loosing original asterics HTTPAction funcionality

--- a/app/lang/i18n.en.json
+++ b/app/lang/i18n.en.json
@@ -1113,6 +1113,7 @@
   "toggleInCollectionElementIfAddedMultipleTimes": "Toggle in collection element if added multiple times",
   "httpMethod": "HTTP method",
   "httpBodyData": "HTTP body (data)",
+  "GridActionHTTP2ROS": "HTTP2ROS Action",
   "GridActionHTTP": "HTTP action",
   "restActionFailed": "HTTP action failed! Reason: {0}",
   "httpAuthUser": "HTTP Authentication User",
